# lightpath

./: .clang-format  .clang-tidy  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  MIGRATION.md  README.md  conanfile.py
.github/workflows/: ci.yml
benchmarks/: core_benchmark.cpp
cmake/: lightpathConfig.cmake.in
docs/: API.md  BUILD_AND_INTEGRATION.md  CORE_AUDIT_REPORT.md  DEVELOPMENT_WORKFLOWS.md  PACKAGING.md  RELEASE.md  TOPOLOGY_AUTHORING.md
examples/: integration_host_loop.cpp  minimal_usage.cpp
include/lightgraph/: engine.hpp  integration.hpp
include/lightgraph/integration/: codecs.hpp  debug.hpp  layers.hpp  objects.hpp  observability.hpp  platform.hpp  remote_ingress.hpp  remote_snapshot.hpp  rendering.hpp  runtime.hpp  topology.hpp  topology_summary.hpp
include/lightgraph/internal/: Globals.h  HashMap.h  debug.hpp  objects.hpp  rendering.hpp  runtime.hpp  topology.hpp
include/lightgraph/internal/core/: Limits.h  Platform.h  Types.h
include/lightgraph/internal/runtime/: LayerJsonCodec.h  LayerView.h  LightListBuild.h  RemoteIngress.h  RemoteSnapshotBuilder.h
include/lightgraph/internal/topology/: TopologyJsonCodec.h  TopologySummary.h
include/lightpath/: engine.hpp  legacy.hpp  lightpath.hpp  status.hpp  types.hpp
include/lightpath/integration/: debug.hpp  objects.hpp  rendering.hpp  runtime.hpp  topology.hpp
include/lightpath/legacy/: debug.hpp  factory.hpp  lightpath.hpp  objects.hpp  rendering.hpp  runtime.hpp  topology.hpp  types.hpp
scripts/: check-benchmark.sh  check-clang-format.sh  generate-coverage.sh  run-clang-tidy.sh
src/: EmitParams.h  Globals.cpp  Globals.h  LPObject.cpp  LPObject.h  LightList.h  Random.cpp  Random.h  State.cpp  State.h
src/api/: Engine.cpp
src/core/: Platform.h  Types.h
src/debug/: Debugger.cpp  Debugger.h  TopologyPixels.cpp  TopologyPixels.h
src/objects/: Cross.cpp  Cross.h  HeptagonStar.cpp  HeptagonStar.h  Line.cpp  Line.h  Triangle.cpp  Triangle.h
src/rendering/: Palette.cpp  Palette.h  Palettes.h
src/runtime/: Behaviour.cpp  Behaviour.h  BgLight.h  EmitParams.h  LPLight.cpp  LayerView.h  Light.cpp  Light.h  LightList.cpp  LightList.h  RemoteIngress.h  RemoteSnapshotBuilder.h  RuntimeLight.cpp  RuntimeLight.h  State.cpp  State.h
src/topology/: Connection.cpp  Connection.h  Intersection.cpp  Intersection.h  Model.cpp  Model.h  Owner.cpp  Owner.h  Port.cpp  Port.h  TopologyObject.cpp  TopologyObject.h  TopologySummary.h  Weight.cpp  Weight.h
tests/: api_fuzz_test.cpp  core_mutation_edge_test.cpp  core_regression_test.cpp  core_remote_template_motion_test.cpp  core_smoke_test.cpp  core_topology_emit_test.cpp  public_api_test.cpp
tests/package_smoke/: CMakeLists.txt  main.cpp  run.cmake
